# OpenCV_Camera

./: CMakeLists.txt  README.md  openCV_Canny.cpp  openCV_ChineseWrite.cpp  openCV_FaceDetection.cpp  openCV_FaceDetection_Blur.cpp
